# adventofcode

./: Main.hs  adventofcode.cabal
Year2015/Day1/: Solution.hs
Year2015/Day10/: Solution.hs
Year2015/Day11/: Solution.hs
Year2015/Day12/: Solution.hs
Year2015/Day2/: Solution.hs
Year2015/Day3/: Solution.hs
Year2015/Day4/: Solution.hs
Year2015/Day5/: Solution.hs
Year2015/Day6/: Solution.hs
Year2015/Day7/: Solution.hs
Year2015/Day8/: Solution.hs
Year2015/Day9/: Solution.hs
Year2020/Day5/: Solution.hs
Year2021/Day5/: Solution.hs
